# folio-trainer

./: .gitignore  README.md  progress.md  pyproject.toml
docs/: allocation_model_default_config.yaml  allocation_model_spec.md
scripts/: download_sp500_prices.py  run_label_generation.py  run_training.py
src/folio_trainer/: __init__.py  cli.py
src/folio_trainer/backtest/: baselines.py  data_utils.py  execution_policy.py  metrics.py  simulator.py
src/folio_trainer/config/: loader.py  schema.py
src/folio_trainer/eval/: evaluate_holdout.py  evaluate_walkforward.py  plots.py  robustness.py
src/folio_trainer/features/: asset_features.py  cross_asset_features.py  market_features.py
src/folio_trainer/labels/: candidate_generation.py  cost_model.py  distill_labels.py  teacher_scoring.py  teacher_sequential_sim.py
src/folio_trainer/models/: dataset.py  direct_weight_gbm.py  direct_weight_linear.py  direct_weight_nn.py  factory.py  losses.py  utility_scorer.py
src/folio_trainer/reports/: data_report.py
src/folio_trainer/splits/: make_splits.py
src/folio_trainer/train/: benchmark.py  train_direct.py  train_utility.py  tune.py
tests/: conftest.py  test_alignment_and_baselines.py  test_calendar.py  test_config.py  test_data_report.py  test_dataset_pipeline.py  test_model_simplex.py
